# simulatorquantic-2.0

./: LICENSE  README.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte
simulatorquantic/: Cargo.toml  quantsimul.db
simulatorquantic/src/: lib.rs  main.rs
