[package]
name = "simulatorquantic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

wasm-bindgen = "0.2"
num-complex = "0.4"
ndarray = "0.15"
js-sys = "0.3"
axum = "0.7"         # Servidor Web moderno
tokio = { version = "1.0", features = ["full"] } # Runtime assíncrono
tower-http = { version = "0.5", features = ["cors"] } # Para o Svelte conseguir acessar a API
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] } # Para converter dados em JSON
jsonwebtoken = "9.3"
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }